index.css
* {
    box-sizing: border-box;
}

body {
    font-family: 'Source Sans Pro', sans-serif;
    font-size: 12px;
    background-color: lightblue;
}

header {
    text-align: center;
}

h1 {
    line-height: 100px;
    font-size: 40px;
}

.image {
    margin-top: 30px;
    margin-bottom: 20px;
    width: 250px;
    height: auto;
    object-fit: contain;
}

.contentDisplay {
    line-height: 20px;
    width: 300px;
    padding: 10px;
    padding-top: 10px;
    border: 2px solid darkgray;
    border-radius: 15px;
    margin:  auto;
    margin-bottom: 20px;
    line-height: 15px;
    text-align: center;
    background-color: aliceblue;
}

footer {
    line-height: 40px;
    border: 2px solid darkgray;
    border-radius: 15px;
    margin:  auto;
    margin-bottom: 30px;
    width: 300px;
    padding: 10px;
    text-align: center;
    background-color: aliceblue;
}

.headline {
    width: 100%;
    margin-top: 20px;
    margin-bottom: 20px;
    font-weight: bold;
}

.alert {
    color: darkred;
    font-weight: bold;
}

.question {
    width: 80%;
    text-align: left;
    margin-left: 20px;
    margin-right: 20px;
    margin-top: 50px;
    font-weight: bold;
}

.button {
    font-weight: bold;
    background-color: midnightblue;
    color: white;
    padding: 10px;
    border: solid darkgray;
    border-radius: 10px;
    margin:20px;
    width: 90px;
    height: 40px;
}

.options {
    width: 100%;
    text-align: left;
    line-height: 30px;
}

.option-prompt {
    line-height: 30px;
}

@media only screen and (min-width: 480px) {

    .options {
        line-height: 40px;
    }

    .option-prompt {
        line-height: 40px;
    }

    .question {
        width: 90%;
    }

    .image {
        margin-top: 20px;
        margin-bottom: 20px;
        width: 350px;
        object-fit: contain;
    }

    body{
        font-size: 14px;
    }

    h1 {
        font-size: 50px;
    }
    .contentDisplay {
        line-height: 30px;
        width: 450px;
    }
    footer {
        width: 450px;
    }
}

@media only screen and (min-width: 800px) {

    .options {
        line-height: 50px;
    }

    .option-prompt {
        line-height: 50px;
    }

    .image {
        width: 600px;
        object-fit: contain;
    }

    .question {
        width: 100%;
    }

    body{
        font-size: 20px;
    }

    h1 {
        font-size: 70px;
    }

    .contentDisplay {
        border: 3px solid darkgray;
        line-height: 40px;
        width: 700px;
    }

    footer {
        border: 3px solid darkgray;
        width: 700px;
    }
}

